# test1128

./: CMakeLists.txt
app/: cmd.c  main.c
app/micro_shell/: nr_micro_shell_config.h
